# oxyllogism

./: CHANGELOG.md  LICENSE  Makefile  README.md  logic.cabal  oxyllogism.cabal
app/: Logic.hs  Main.hs
src/main/: Logic.hs  Main.hs  Proof.hs
src/sandbox/: MonadDemo.hs  Sandbox.hs
src/test/: Test.hs  sandbox.hs  test-logic.hs
test/: test-logic.hs
