cabal-version:      2.4

name:               logic
version:            0.1.0.0
synopsis:           Fun with formal logic
description:        A DSL for formulating, deriving, and evaluating logical expressions.
homepage:           https://github.com/wafna/oxyllogism
bug-reports:        https://github.com/wafna/oxyllogism
license:            MIT
license-file:       LICENSE
author:             wafna
maintainer:         wafna@duck.com
category:           Math
extra-source-files: CHANGELOG.md

executable logic
    hs-source-dirs:     src/main
    main-is:            Main.hs
    other-modules:      Logic
    other-extensions:   UnicodeSyntax
    ghc-options:        -Wall
    default-language:   Haskell2010
    build-depends:    
                        base ^>=4.14.3.0,
                        containers == 0.6.5.*

test-suite test-logic
    type:               exitcode-stdio-1.0
    hs-source-dirs:     src/main, src/test
    main-is:            test-logic.hs
    other-modules:      Logic
    ghc-options:        -Wall
    default-language:   Haskell2010
    build-depends:    
                        base ^>=4.14.3.0,
                        containers == 0.6.5.*,
                        hspec ^>= 2.7.4
